--- a/STM32H5_USBX_CDC.ioc
+++ b/STM32H5_USBX_CDC.ioc
@@ -17,66 +17,45 @@ Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32H5
 Mcu.IP0=BOOTPATH
 Mcu.IP1=CORTEX_M33_NS
-Mcu.IP2=MEMORYMAP
-Mcu.IP3=NUCLEO-H563ZI
-Mcu.IP4=NVIC
-Mcu.IP5=PWR
-Mcu.IP6=RCC
-Mcu.IP7=SYS
-Mcu.IP8=USB
-Mcu.IP9=USBX
-Mcu.IPNb=11
+Mcu.IP10=USB
+Mcu.IP11=USBX
+Mcu.IP2=DEBUG
+Mcu.IP3=MEMORYMAP
+Mcu.IP4=NUCLEO-H563ZI
+Mcu.IP5=NUCLEO-H563ZI
+Mcu.IP6=NVIC
+Mcu.IP7=PWR
+Mcu.IP8=RCC
+Mcu.IP9=SYS
+Mcu.IPNb=13
 Mcu.Name=STM32H563ZITx
 Mcu.Package=LQFP144
-Mcu.Pin0=PE2
-Mcu.Pin1=PE3
-Mcu.Pin10=PC1
-Mcu.Pin11=PA1
-Mcu.Pin12=PA2
-Mcu.Pin13=PA4
-Mcu.Pin14=PA7
-Mcu.Pin15=PC4
-Mcu.Pin16=PC5
-Mcu.Pin17=PB0
-Mcu.Pin18=PB13
-Mcu.Pin19=PB14
-Mcu.Pin2=PE4
-Mcu.Pin20=PB15
-Mcu.Pin21=PD8
-Mcu.Pin22=PD9
-Mcu.Pin23=PG4
-Mcu.Pin24=PG7
-Mcu.Pin25=PA9
-Mcu.Pin26=PA11
-Mcu.Pin27=PA12
-Mcu.Pin28=PA13(JTMS/SWDIO)
-Mcu.Pin29=PA14(JTCK/SWCLK)
-Mcu.Pin3=PE5
-Mcu.Pin30=PA15(JTDI)
-Mcu.Pin31=PG11
-Mcu.Pin32=PG13
-Mcu.Pin33=PB3(JTDO/TRACESWO)
-Mcu.Pin34=PB6
-Mcu.Pin35=PB7
-Mcu.Pin36=VP_CORTEX_M33_NS_VS_Hclk
-Mcu.Pin37=VP_PWR_VS_SECSignals
-Mcu.Pin38=VP_PWR_VS_LPOM
-Mcu.Pin39=VP_PWR_VS_DBSignals
-Mcu.Pin4=PE6
-Mcu.Pin40=VP_SYS_VS_Systick
-Mcu.Pin41=VP_USBX_Core_System
-Mcu.Pin42=VP_USBX_UX Device CoreStack_FS
-Mcu.Pin43=VP_USBX_UX Device Controller_FS
-Mcu.Pin44=VP_USBX_UX Device CDC ACM Class_FS
-Mcu.Pin45=VP_BOOTPATH_VS_BOOTPATH
-Mcu.Pin46=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin47=VP_NUCLEO-H563ZI_VS_BSP_COMMON
-Mcu.Pin5=PC13
-Mcu.Pin6=PC14-OSC32_IN(OSC32_IN)
-Mcu.Pin7=PC15-OSC32_OUT(OSC32_OUT)
-Mcu.Pin8=PF4
-Mcu.Pin9=PH0-OSC_IN(PH0)
-Mcu.PinsNb=48
+Mcu.Pin0=PC13
+Mcu.Pin1=PC14-OSC32_IN(OSC32_IN)
+Mcu.Pin10=PA12
+Mcu.Pin11=PA13(JTMS/SWDIO)
+Mcu.Pin12=PA14(JTCK/SWCLK)
+Mcu.Pin13=VP_CORTEX_M33_NS_VS_Hclk
+Mcu.Pin14=VP_PWR_VS_SECSignals
+Mcu.Pin15=VP_PWR_VS_LPOM
+Mcu.Pin16=VP_PWR_VS_DBSignals
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_USBX_Core_System
+Mcu.Pin19=VP_USBX_UX Device CoreStack_FS
+Mcu.Pin2=PC15-OSC32_OUT(OSC32_OUT)
+Mcu.Pin20=VP_USBX_UX Device Controller_FS
+Mcu.Pin21=VP_USBX_UX Device CDC ACM Class_FS
+Mcu.Pin22=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin23=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin24=VP_NUCLEO-H563ZI_VS_BSP_COMMON
+Mcu.Pin3=PF4
+Mcu.Pin4=PH0-OSC_IN(PH0)
+Mcu.Pin5=PB0
+Mcu.Pin6=PG4
+Mcu.Pin7=PG7
+Mcu.Pin8=PA9
+Mcu.Pin9=PA11
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H563ZITx
@@ -87,7 +66,7 @@ NUCLEO-H563ZI.IPParameters=LD1,LD2,BUTTON,VCP,LD3
 NUCLEO-H563ZI.LD1=true
 NUCLEO-H563ZI.LD2=true
 NUCLEO-H563ZI.LD3=true
-NUCLEO-H563ZI.VCP=true
+NUCLEO-H563ZI.VCP=false
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI13_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
@@ -101,13 +80,6 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.USB_DRD_FS_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PA1.GPIO_Label=RMII_REF_CLK
-PA1.GPIO_Mode=GPIO_MODE_AF_PP
-PA1.GPIO_PuPd=GPIO_NOPULL
-PA1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PA1.Locked=true
-PA1.Signal=ETH_REF_CLK
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=USB_FS_N
 PA11.Locked=true
@@ -121,73 +93,17 @@ PA12.Signal=USB_DP
 PA13(JTMS/SWDIO).GPIOParameters=GPIO_Label
 PA13(JTMS/SWDIO).GPIO_Label=SWDIO
 PA13(JTMS/SWDIO).Locked=true
+PA13(JTMS/SWDIO).Mode=Serial_Wire
 PA13(JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
 PA14(JTCK/SWCLK).GPIOParameters=GPIO_Label
 PA14(JTCK/SWCLK).GPIO_Label=SWCLK
 PA14(JTCK/SWCLK).Locked=true
+PA14(JTCK/SWCLK).Mode=Serial_Wire
 PA14(JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
-PA15(JTDI).GPIOParameters=GPIO_Label
-PA15(JTDI).GPIO_Label=T_JTDI
-PA15(JTDI).Locked=true
-PA15(JTDI).Signal=DEBUG_JTDI
-PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PA2.GPIO_Label=RMII_MDIO
-PA2.GPIO_Mode=GPIO_MODE_AF_PP
-PA2.GPIO_PuPd=GPIO_NOPULL
-PA2.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PA2.Locked=true
-PA2.Signal=ETH_MDIO
-PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=VBUS_SENSE
-PA4.Locked=true
-PA4.Signal=ADCx_INP18
-PA7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PA7.GPIO_Label=RMII_CRS_DV
-PA7.GPIO_Mode=GPIO_MODE_AF_PP
-PA7.GPIO_PuPd=GPIO_NOPULL
-PA7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PA7.Locked=true
-PA7.Signal=ETH_CRS_DV
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=UCDP_DBn
 PA9.Locked=true
-PA9.Signal=UCPD1_DB1
+PA9.Signal=GPXTI9
 PB0.Locked=true
 PB0.Signal=GPIO_Output
-PB13.GPIOParameters=GPIO_Label
-PB13.GPIO_Label=UCPD_CC1
-PB13.Locked=true
-PB13.Signal=UCPD1_CC1
-PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=UCPD_CC2
-PB14.Locked=true
-PB14.Signal=UCPD1_CC2
-PB15.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PB15.GPIO_Label=RMII_TXD1
-PB15.GPIO_Mode=GPIO_MODE_AF_PP
-PB15.GPIO_PuPd=GPIO_NOPULL
-PB15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PB15.Locked=true
-PB15.Signal=ETH_TXD1
-PB3(JTDO/TRACESWO).GPIOParameters=GPIO_Label
-PB3(JTDO/TRACESWO).GPIO_Label=SWO
-PB3(JTDO/TRACESWO).Locked=true
-PB3(JTDO/TRACESWO).Signal=DEBUG_JTDO-SWO
-PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=ARD_D1_TX
-PB6.Locked=true
-PB6.Signal=LPUART1_TX
-PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=ARD_D0_RX
-PB7.Locked=true
-PB7.Signal=LPUART1_RX
-PC1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PC1.GPIO_Label=RMII_MDC
-PC1.GPIO_Mode=GPIO_MODE_AF_PP
-PC1.GPIO_PuPd=GPIO_NOPULL
-PC1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PC1.Locked=true
-PC1.Signal=ETH_MDC
 PC13.Locked=true
 PC13.Signal=GPXTI13
 PC14-OSC32_IN(OSC32_IN).Locked=true
@@ -196,60 +112,8 @@ PC14-OSC32_IN(OSC32_IN).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT(OSC32_OUT).Locked=true
 PC15-OSC32_OUT(OSC32_OUT).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT(OSC32_OUT).Signal=RCC_OSC32_OUT
-PC4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PC4.GPIO_Label=RMII_RXD0
-PC4.GPIO_Mode=GPIO_MODE_AF_PP
-PC4.GPIO_PuPd=GPIO_NOPULL
-PC4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PC4.Locked=true
-PC4.Signal=ETH_RXD0
-PC5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PC5.GPIO_Label=RMII_RXD1
-PC5.GPIO_Mode=GPIO_MODE_AF_PP
-PC5.GPIO_PuPd=GPIO_NOPULL
-PC5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PC5.Locked=true
-PC5.Signal=ETH_RXD1
-PD8.Locked=true
-PD8.Signal=USART3_TX
-PD9.Locked=true
-PD9.Signal=USART3_RX
-PE2.GPIOParameters=GPIO_Label
-PE2.GPIO_Label=TRACE_CK
-PE2.Locked=true
-PE2.Signal=DEBUG_TRACECLK
-PE3.GPIOParameters=GPIO_Label
-PE3.GPIO_Label=TRACE_D0
-PE3.Locked=true
-PE3.Signal=DEBUG_TRACED0
-PE4.GPIOParameters=GPIO_Label
-PE4.GPIO_Label=TRACE_D1
-PE4.Locked=true
-PE4.Signal=DEBUG_TRACED1
-PE5.GPIOParameters=GPIO_Label
-PE5.GPIO_Label=TRACE_D2
-PE5.Locked=true
-PE5.Signal=DEBUG_TRACED2
-PE6.GPIOParameters=GPIO_Label
-PE6.GPIO_Label=TRACE_D3
-PE6.Locked=true
-PE6.Signal=DEBUG_TRACED3
 PF4.Locked=true
 PF4.Signal=GPIO_Output
-PG11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PG11.GPIO_Label=RMII_TXT_EN
-PG11.GPIO_Mode=GPIO_MODE_AF_PP
-PG11.GPIO_PuPd=GPIO_NOPULL
-PG11.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PG11.Locked=true
-PG11.Signal=ETH_TX_EN
-PG13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PG13.GPIO_Label=RMI_TXD0
-PG13.GPIO_Mode=GPIO_MODE_AF_PP
-PG13.GPIO_PuPd=GPIO_NOPULL
-PG13.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PG13.Locked=true
-PG13.Signal=ETH_TXD0
 PG4.Locked=true
 PG4.Signal=GPIO_Output
 PG7.GPIOParameters=GPIO_Label
@@ -379,22 +243,32 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=500000000
 RCC.VCOPLL2OutputFreq_Value=516000000
 RCC.VCOPLL3OutputFreq_Value=516000000
-SH.ADCx_INP18.0=ADC1_INP18
-SH.ADCx_INP18.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 USB.IPParameters=VirtualMode
 USB.VirtualMode=Device_Only
 USBX.BSP.number=1
 USBX.Core_System=1
-USBX.IPParameters=Core_System,UX_Device_CoreStack,UX_Device_Controller,UX_DEVICE_CDC_ACM,USBD_CDCACM_EPIN_ADDR,USBD_CDCACM_EPOUT_ADDR
-USBX.USBD_CDCACM_EPIN_ADDR=2
+USBX.IPParameters=Core_System,UX_Device_CoreStack,UX_Device_Controller,UX_DEVICE_CDC_ACM,USBD_CDCACM_EPIN_ADDR,USBD_CDCACM_EPOUT_ADDR,USBD_PID,USBD_PRODUCT_STRING,USBD_SERIAL_NUMBER,UX_SLAVE_REQUEST_DATA_MAX_LENGTH,MAX_POWER_IN_MILLI_AMPER,UX_DEVICE_APP_MEM_POOL_SIZE_STANDALONE,USBX_DEVICE_SYS_SIZE,REG_USBX_DEVICE_CON_CK,USBD_CDCACM_EPINCMD_ADDR,UX_DEVICE_CLASS_CDC_ACM_WRITE_AUTO_ZLP
+USBX.MAX_POWER_IN_MILLI_AMPER=0
+USBX.REG_USBX_DEVICE_CON_CK=1
+USBX.USBD_CDCACM_EPINCMD_ADDR=2
+USBX.USBD_CDCACM_EPIN_ADDR=1
 USBX.USBD_CDCACM_EPOUT_ADDR=3
+USBX.USBD_PID=22336
+USBX.USBD_PRODUCT_STRING=STM32 Virtual ComPort
+USBX.USBD_SERIAL_NUMBER=CDC_ACM001
+USBX.USBX_DEVICE_SYS_SIZE=4*1024
+USBX.UX_DEVICE_APP_MEM_POOL_SIZE_STANDALONE=8*1024
 USBX.UX_DEVICE_CDC_ACM=1
+USBX.UX_DEVICE_CLASS_CDC_ACM_WRITE_AUTO_ZLP=1
 USBX.UX_Device_Controller=1
 USBX.UX_Device_CoreStack=1
+USBX.UX_SLAVE_REQUEST_DATA_MAX_LENGTH=512
 USBX0.BSP.STBoard=false
 USBX0.BSP.api=Unknown
 USBX0.BSP.component=
