--- a/STM32H5_USBX_CDC.ioc
+++ b/STM32H5_USBX_CDC.ioc
@@ -17,8 +17,9 @@ Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32H5
 Mcu.IP0=BOOTPATH
 Mcu.IP1=CORTEX_M33_NS
-Mcu.IP10=USB
-Mcu.IP11=USBX
+Mcu.IP10=TIM6
+Mcu.IP11=USB
+Mcu.IP12=USBX
 Mcu.IP2=DEBUG
 Mcu.IP3=MEMORYMAP
 Mcu.IP4=NUCLEO-H563ZI
@@ -27,7 +28,7 @@ Mcu.IP6=NVIC
 Mcu.IP7=PWR
 Mcu.IP8=RCC
 Mcu.IP9=SYS
-Mcu.IPNb=13
+Mcu.IPNb=14
 Mcu.Name=STM32H563ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -35,19 +36,21 @@ Mcu.Pin1=PC14-OSC32_IN(OSC32_IN)
 Mcu.Pin10=PA12
 Mcu.Pin11=PA13(JTMS/SWDIO)
 Mcu.Pin12=PA14(JTCK/SWCLK)
-Mcu.Pin13=VP_CORTEX_M33_NS_VS_Hclk
-Mcu.Pin14=VP_PWR_VS_SECSignals
-Mcu.Pin15=VP_PWR_VS_LPOM
-Mcu.Pin16=VP_PWR_VS_DBSignals
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_USBX_Core_System
-Mcu.Pin19=VP_USBX_UX Device CoreStack_FS
+Mcu.Pin13=PB8
+Mcu.Pin14=VP_CORTEX_M33_NS_VS_Hclk
+Mcu.Pin15=VP_PWR_VS_SECSignals
+Mcu.Pin16=VP_PWR_VS_LPOM
+Mcu.Pin17=VP_PWR_VS_DBSignals
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT(OSC32_OUT)
-Mcu.Pin20=VP_USBX_UX Device Controller_FS
-Mcu.Pin21=VP_USBX_UX Device CDC ACM Class_FS
-Mcu.Pin22=VP_BOOTPATH_VS_BOOTPATH
-Mcu.Pin23=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin24=VP_NUCLEO-H563ZI_VS_BSP_COMMON
+Mcu.Pin20=VP_USBX_Core_System
+Mcu.Pin21=VP_USBX_UX Device CoreStack_FS
+Mcu.Pin22=VP_USBX_UX Device Controller_FS
+Mcu.Pin23=VP_USBX_UX Device CDC ACM Class_FS
+Mcu.Pin24=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin25=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin26=VP_NUCLEO-H563ZI_VS_BSP_COMMON
 Mcu.Pin3=PF4
 Mcu.Pin4=PH0-OSC_IN(PH0)
 Mcu.Pin5=PB0
@@ -55,7 +58,7 @@ Mcu.Pin6=PG4
 Mcu.Pin7=PG7
 Mcu.Pin8=PA9
 Mcu.Pin9=PA11
-Mcu.PinsNb=25
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H563ZITx
@@ -78,6 +81,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM6_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_DRD_FS_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA11.GPIOParameters=GPIO_Label
@@ -104,6 +108,10 @@ PA9.Locked=true
 PA9.Signal=GPXTI9
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_Speed
+PB8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB8.Locked=true
+PB8.Signal=GPIO_Output
 PC13.Locked=true
 PC13.Signal=GPXTI13
 PC14-OSC32_IN(OSC32_IN).Locked=true
@@ -115,7 +123,6 @@ PC15-OSC32_OUT(OSC32_OUT).Signal=RCC_OSC32_OUT
 PF4.Locked=true
 PF4.Signal=GPIO_Output
 PG4.Locked=true
-PG4.Signal=GPIO_Output
 PG7.GPIOParameters=GPIO_Label
 PG7.GPIO_Label=UCPD_FLT
 PG7.Locked=true
@@ -249,6 +256,8 @@ SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
+TIM6.IPParameters=Prescaler
+TIM6.Prescaler=31249
 USB.IPParameters=VirtualMode
 USB.VirtualMode=Device_Only
 USBX.BSP.number=1
@@ -295,6 +304,8 @@ VP_PWR_VS_SECSignals.Mode=Security/Privilege
 VP_PWR_VS_SECSignals.Signal=PWR_VS_SECSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 VP_USBX_Core_System.Mode=Core_System
 VP_USBX_Core_System.Signal=USBX_Core_System
 VP_USBX_UX\ Device\ CDC\ ACM\ Class_FS.Mode=UX_Device_class_CDC_ACM_FS
