Fixed In EP addr

--- a/STM32H5_USBX_CDC.ioc
+++ b/STM32H5_USBX_CDC.ioc
@@ -256,7 +256,8 @@ SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
-TIM6.IPParameters=Prescaler
+TIM6.IPParameters=Prescaler,PeriodNoDither
+TIM6.PeriodNoDither=1
 TIM6.Prescaler=31249
 USB.IPParameters=VirtualMode
 USB.VirtualMode=Device_Only
