--- a/STM32H5_USBX_CDC.ioc
+++ b/STM32H5_USBX_CDC.ioc
@@ -8,6 +8,11 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 File.Version=6
+GPDMA1.DIRECTION_GPDMACH0=DMA_MEMORY_TO_PERIPH
+GPDMA1.IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0=__NULL
+GPDMA1.IPParameters=IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0,REQUEST_GPDMACH0,DIRECTION_GPDMACH0,SRCINC_GPDMACH0
+GPDMA1.REQUEST_GPDMACH0=GPDMA1_REQUEST_UART4_TX
+GPDMA1.SRCINC_GPDMACH0=DMA_SINC_INCREMENTED
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 MMTAppRegionsCount=0
@@ -17,48 +22,53 @@ Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32H5
 Mcu.IP0=BOOTPATH
 Mcu.IP1=CORTEX_M33_NS
-Mcu.IP10=TIM6
-Mcu.IP11=USB
-Mcu.IP12=USBX
+Mcu.IP10=SYS
+Mcu.IP11=TIM6
+Mcu.IP12=UART4
+Mcu.IP13=USB
+Mcu.IP14=USBX
 Mcu.IP2=DEBUG
-Mcu.IP3=MEMORYMAP
-Mcu.IP4=NUCLEO-H563ZI
+Mcu.IP3=GPDMA1
+Mcu.IP4=MEMORYMAP
 Mcu.IP5=NUCLEO-H563ZI
-Mcu.IP6=NVIC
-Mcu.IP7=PWR
-Mcu.IP8=RCC
-Mcu.IP9=SYS
-Mcu.IPNb=14
+Mcu.IP6=NUCLEO-H563ZI
+Mcu.IP7=NVIC
+Mcu.IP8=PWR
+Mcu.IP9=RCC
+Mcu.IPNb=16
 Mcu.Name=STM32H563ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN(OSC32_IN)
-Mcu.Pin10=PA12
-Mcu.Pin11=PA13(JTMS/SWDIO)
-Mcu.Pin12=PA14(JTCK/SWCLK)
-Mcu.Pin13=PB8
-Mcu.Pin14=VP_CORTEX_M33_NS_VS_Hclk
-Mcu.Pin15=VP_PWR_VS_SECSignals
-Mcu.Pin16=VP_PWR_VS_LPOM
-Mcu.Pin17=VP_PWR_VS_DBSignals
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin10=PA9
+Mcu.Pin11=PA11
+Mcu.Pin12=PA12
+Mcu.Pin13=PA13(JTMS/SWDIO)
+Mcu.Pin14=PA14(JTCK/SWCLK)
+Mcu.Pin15=PB8
+Mcu.Pin16=VP_CORTEX_M33_NS_VS_Hclk
+Mcu.Pin17=VP_GPDMA1_VS_GPDMACH0
+Mcu.Pin18=VP_PWR_VS_SECSignals
+Mcu.Pin19=VP_PWR_VS_LPOM
 Mcu.Pin2=PC15-OSC32_OUT(OSC32_OUT)
-Mcu.Pin20=VP_USBX_Core_System
-Mcu.Pin21=VP_USBX_UX Device CoreStack_FS
-Mcu.Pin22=VP_USBX_UX Device Controller_FS
-Mcu.Pin23=VP_USBX_UX Device CDC ACM Class_FS
-Mcu.Pin24=VP_BOOTPATH_VS_BOOTPATH
-Mcu.Pin25=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin26=VP_NUCLEO-H563ZI_VS_BSP_COMMON
+Mcu.Pin20=VP_PWR_VS_DBSignals
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin23=VP_USBX_Core_System
+Mcu.Pin24=VP_USBX_UX Device CoreStack_FS
+Mcu.Pin25=VP_USBX_UX Device Controller_FS
+Mcu.Pin26=VP_USBX_UX Device CDC ACM Class_FS
+Mcu.Pin27=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin28=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin29=VP_NUCLEO-H563ZI_VS_BSP_COMMON
 Mcu.Pin3=PF4
 Mcu.Pin4=PH0-OSC_IN(PH0)
-Mcu.Pin5=PB0
-Mcu.Pin6=PG4
-Mcu.Pin7=PG7
-Mcu.Pin8=PA9
-Mcu.Pin9=PA11
-Mcu.PinsNb=27
+Mcu.Pin5=PA0
+Mcu.Pin6=PA1
+Mcu.Pin7=PB0
+Mcu.Pin8=PG4
+Mcu.Pin9=PG7
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H563ZITx
@@ -74,6 +84,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI13_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
+NVIC.GPDMA1_Channel0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -84,6 +95,10 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM6_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_DRD_FS_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0.Mode=Asynchronous
+PA0.Signal=UART4_TX
+PA1.Mode=Asynchronous
+PA1.Signal=UART4_RX
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=USB_FS_N
 PA11.Locked=true
@@ -163,7 +178,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USB_PCD_Init-USB-true-HAL-false,4-MX_USBX_Init-USBX-false-HAL-false,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_USB_PCD_Init-USB-true-HAL-false,5-MX_TIM6_Init-TIM6-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true,7-MX_USBX_Init-USBX-false-HAL-false,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=250000000
 RCC.AHBFreq_Value=250000000
 RCC.APB1Freq_Value=250000000
@@ -293,6 +308,8 @@ VP_BOOTPATH_VS_BOOTPATH.Mode=BP_Activate
 VP_BOOTPATH_VS_BOOTPATH.Signal=BOOTPATH_VS_BOOTPATH
 VP_CORTEX_M33_NS_VS_Hclk.Mode=Hclk_Mode
 VP_CORTEX_M33_NS_VS_Hclk.Signal=CORTEX_M33_NS_VS_Hclk
+VP_GPDMA1_VS_GPDMACH0.Mode=SIMPLEREQUEST_GPDMACH0
+VP_GPDMA1_VS_GPDMACH0.Signal=GPDMA1_VS_GPDMACH0
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_NUCLEO-H563ZI_VS_BSP_COMMON.Mode=COMMON
